# random_c_cpp_programs

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh
c_programs/: barycentric.c  base64  base64.c  bingo.c  bmi.c  brinhard.c  cintegral.c  complex.c  complexquadr  complexquadr.c  complexvector.c  decimconv.c  distprime.c  eigenvalue.c  euclidian.c  euclidianvector.c  extdeuclidian.c  fibonacci.c  fibonacci.h  file_server.c  fingerclient.c  fingerserver.c  gageblockstack.c  hangman.c  invmatrix.c  kirchoffs.c  lowpassfil.c  mandelbrot.c  matrixcompare.c  matrixmath.c  ohmslaw.c  othagonmatrix.c  permutation.c  polynomialring.c  quadraticsolv.c  rcnetwork.c  resistance.c  resistorcolor.c  rowechelonform.c  sort.c  (+10 more)
cpp_programs/: amort.cpp  bingo.cpp  convertcsv.cpp  degreeconvert.cpp  gearcalc.cpp  gradebook.cpp  gradebook.h  graphcalc.cpp  htmlhelloworld.cpp  jsonparser.cpp  linearregress.cpp  longdiv.cpp  markovchain.cpp  newwinsize.cpp  newwinsize.hpp  righttriangle.cpp  rockpaper.cpp  stddeviation.cpp  winsize.cpp
cpp_programs/convertcsv/: convertcsv.cpp  convertcsv.h  main.cpp  test.csv  test.json  test1.csv  test1.json
cpp_programs/gradebook/: CMakeLists.txt  dataframe.cpp  dataframe.h  gradebook.cpp  gradebook.h  permissions.cpp  permissions.h
cpp_programs/gradebook/assets/: assignmentdata.csv  classdata.csv  grades.csv  studentdata.csv  teacherdata.csv
cpp_programs/polyfact/: libpolyfact.cpp
cpp_programs/polynomial/: libpolyfact.h
